# zomato-delivery-time-prediction

./: .gitignore  2.9.0  Dockerfile  README.md  app.py  application.py  check_model.py  dvc.yaml  predict.py  pyproject.toml  wait_for_server.py
.dvc/: config
.github/workflows/: ci_cd.yaml
data/cleaned/: .gitignore
data/raw/: .gitignore  swiggy.csv.dvc
notebooks/: Exp 1 drop vs impute.ipynb  Exp 2 missing indicator.ipynb  LGBM HP Tuning.ipynb  Model Selection.ipynb  RF HP Tuning.ipynb  Stacking Regressor HP Tuning.ipynb  Stacking_Regressor_HP_Tuning.ipynb  dataCleaning.ipynb  data_clean_utils.py  finalEstimator.ipynb
scripts/: data_clean_utils.py  promote_model_to_prod.py  sample_predictions.py
src/data/: data_cleaning.py  data_preparation.py
src/models/: model_evaluation.py  model_registory.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: test_api_endpoint.py  test_model_perf.py  test_model_registry.py
